fix: prevent layout shift (scrollbar-gutter:stable) + fix back button jumping between pages

--- a/css/main.css
+++ b/css/main.css
@@ -93,6 +93,7 @@ body {
   line-height: 1.6;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  scrollbar-gutter: stable;
 }
 
 img, video, svg {
